--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "riot-setup",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "gulp"
   },
   "keywords": [],
-  "author": "",
+  "author": "Daniel Moreira",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015-riot": "^1.1.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-open": "^2.0.0",
+    "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
-    "riot": "^2.6.7",
-    "riotify": "^1.0.1",
+    "materialize-css": "^0.98.0",
+    "riot": "^3.1.0",
+    "riot-route": "^3.1.0",
+    "riotify": "^2.0.0",
     "run-sequence": "^1.2.2",
     "vinyl-source-stream": "^1.1.0"
   }
