Adds redux store

--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "riotify": "^2.0.0",
     "run-sequence": "^1.2.2",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
